[tool.poetry]
name = "VisSE"
description = "Visualizando la SignoEscritura"
version = "0.0.1"
authors = ["Antonio F. G. Sevilla <afgs@ucm.es>"]
license = "OSL-3.0"

[tool.poetry.dependencies]
python = "3.9"
quevedo = {path = "quevedo", extras = ["web"], develop = true}
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
python-multipart = "^0.0.5"
